--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
             margin-bottom: 10px;
             max-width: 80%;
             line-height: 1.5;
+            cursor: pointer;
         }
         .user-message {
             background-color: #007bff;
             color: white;
             align-self: flex-end;
             text-align: right;
+            cursor: default;
         }
         .bot-message {
             background-color: #e5e5ea;
@@ -48,24 +50,13 @@
             align-self: flex-start;
             text-align: left;
         }
-        .buttons-container {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            margin-top: 10px;
-        }
-        button {
-            padding: 10px;
-            border: none;
-            background-color: #007bff;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 5px;
+        .selectable {
+            background-color: #e5e5ea;
+            border: 1px solid #d1d1d1;
             transition: background 0.3s;
         }
-        button:hover {
-            background-color: #0056b3;
+        .selectable:hover {
+            background-color: #d1d1d1;
         }
     </style>
 </head>
@@ -74,36 +65,31 @@
     <div class="chat-container">
         <div class="chat-box" id="chat-box">
             <div class="bot-message message">Hi, I am <b>MythBuster!</b> Please select one of the following myths:</div>
-        </div>
-        
-        <div class="buttons-container" id="buttons-container">
-            <button onclick="selectMyth(1)">Myth: I won’t pay any IHT on my business or company.</button>
-            <button onclick="selectMyth(2)">Myth: Surviving the “seven-year clock” is all I have to worry about.</button>
-            <button onclick="selectMyth(3)">Myth: I have to wait seven years for a gift to be outside my estate for IHT.</button>
+            <div id="options"></div>
         </div>
     </div>
 
     <script>
-        function selectMyth(option) {
-            let response = "";
-            let selectedMyth = "";
+        function showMyths() {
+            let optionsDiv = document.getElementById("options");
+            optionsDiv.innerHTML = ""; // Clear previous myths
 
-            if (option === 1) {
-                selectedMyth = "Myth: I won’t pay any IHT on my business or company.";
-                response = "<b>Fact:</b> Unless Business Relief is available in full, the value (or part) of a business can be charged to IHT, creating a significant liability.<br><br>" +
-                           "For example, if you have grown a £50m business that you would like to transfer either as part of retirement or estate planning and have not made use of Business Relief, this could create a 40% IHT liability of £20m.";
-            } 
-            else if (option === 2) {
-                selectedMyth = "Myth: Surviving the 'seven-year clock' is all I have to worry about.";
-                response = "<b>Fact:</b> Gifts of chargeable assets (such as shares and property) during your lifetime are also exposed to capital gains tax (CGT), risking a significant tax charge if the value of the asset has risen since you acquired it.<br><br>" +
-                           "There are also anti-avoidance provisions to prevent you from retaining benefits from gifted assets, or assets acquired via gifts of cash, so lifetime gifts can require careful thought to be an important part of IHT planning.";
-            } 
-            else if (option === 3) {
-                selectedMyth = "Myth: I have to wait seven years for a gift to be outside my estate for IHT.";
-                response = "<b>Fact:</b> Gifts of capital between you and another person are deemed potentially exempt transfers (PET) for IHT and do require you to survive seven years from the date of the gift.<br><br>" +
-                           "However, not all gifts are PET, and you may have scope to make immediately exempt gifts if that is appropriate for your situation and wishes.";
-            }
+            let myths = [
+                "Myth: I won’t pay any IHT on my business or company.",
+                "Myth: Surviving the “seven-year clock” is all I have to worry about.",
+                "Myth: I have to wait seven years for a gift to be outside my estate for IHT."
+            ];
 
+            myths.forEach((myth, index) => {
+                let mythOption = document.createElement("div");
+                mythOption.className = "bot-message message selectable";
+                mythOption.innerHTML = myth;
+                mythOption.onclick = function() { selectMyth(index + 1, myth); };
+                optionsDiv.appendChild(mythOption);
+            });
+        }
+
+        function selectMyth(option, selectedMyth) {
             let chatBox = document.getElementById("chat-box");
 
             // Add user message (selected myth)
@@ -112,21 +98,35 @@
             userMessage.innerHTML = selectedMyth;
             chatBox.appendChild(userMessage);
 
+            let response = "";
+            if (option === 1) {
+                response = "<b>Fact:</b> Unless Business Relief is available in full, the value (or part) of a business can be charged to IHT, creating a significant liability.<br><br>" +
+                           "For example, if you have grown a £50m business that you would like to transfer either as part of retirement or estate planning and have not made use of Business Relief, this could create a 40% IHT liability of £20m.";
+            } 
+            else if (option === 2) {
+                response = "<b>Fact:</b> Gifts of chargeable assets (such as shares and property) during your lifetime are also exposed to capital gains tax (CGT), risking a significant tax charge if the value of the asset has risen since you acquired it.<br><br>" +
+                           "There are also anti-avoidance provisions to prevent you from retaining benefits from gifted assets, or assets acquired via gifts of cash, so lifetime gifts can require careful thought to be an important part of IHT planning.";
+            } 
+            else if (option === 3) {
+                response = "<b>Fact:</b> Gifts of capital between you and another person are deemed potentially exempt transfers (PET) for IHT and do require you to survive seven years from the date of the gift.<br><br>" +
+                           "However, not all gifts are PET, and you may have scope to make immediately exempt gifts if that is appropriate for your situation and wishes.";
+            }
+
             // Add bot response (fact)
             let botMessage = document.createElement("div");
             botMessage.className = "bot-message message";
             botMessage.innerHTML = response;
             chatBox.appendChild(botMessage);
 
-            // Add myth selection prompt again
-            let newPrompt = document.createElement("div");
-            newPrompt.className = "bot-message message";
-            newPrompt.innerHTML = "Would you like to check another myth? Please select:";
-            chatBox.appendChild(newPrompt);
-
-            // Scroll chat to the latest message
+            // Scroll chat to latest message
             chatBox.scrollTop = chatBox.scrollHeight;
+
+            // Show myths again for another selection
+            setTimeout(showMyths, 1000);
         }
+
+        // Show myths initially
+        showMyths();
     </script>
 
 </body>
