--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MythBuster: Inheritance Tax Edition</title>
+    <title>Inheritance Tax MythBuster</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,19 +15,40 @@
             margin: 0;
         }
         .chat-container {
-            width: 90%;
-            max-width: 400px;
+            width: 95%;
+            max-width: 500px;
             background: white;
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
             border-radius: 10px;
             padding: 20px;
             display: flex;
             flex-direction: column;
+            position: relative;
+        }
+        .chat-header {
+            font-size: 18px;
+            font-weight: bold;
+            text-align: center;
+            padding-bottom: 10px;
+            border-bottom: 2px solid #ddd;
+        }
+        .end-session {
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 14px;
         }
         .chat-box {
-            max-height: 400px;
+            max-height: 450px;
             overflow-y: auto;
             padding-bottom: 10px;
+            margin-top: 10px;
         }
         .message {
             padding: 10px;
@@ -73,9 +94,11 @@
 <body>
 
     <div class="chat-container">
+        <div class="chat-header">💬 Inheritance Tax MythBuster</div>
+        <button class="end-session" onclick="resetChat()">End Session</button>
         <div class="chat-box" id="chat-box">
-            <div class="bot-message message">👋 Hi there! I’m <b>MythBuster</b>, your friendly inheritance tax fact-checker. Let's bust some myths together! 💡</div>
-            <div class="bot-message message">I’m here to help clear up any misconceptions you might have. Choose a myth below, and I’ll tell you the facts.</div>
+            <div class="bot-message message">Welcome to the **Inheritance Tax MythBuster**. Our goal is to help you understand the facts behind common misconceptions about inheritance tax.</div>
+            <div class="bot-message message">Please select a myth from the options below, and I'll provide you with accurate information.</div>
             <div id="options"></div>
         </div>
     </div>
@@ -100,6 +123,8 @@
                 mythOption.onclick = function() { selectMyth(index + 1, myth); };
                 optionsDiv.appendChild(mythOption);
             });
+
+            autoScroll();
         }
 
         function selectMyth(option, selectedMyth) {
@@ -115,17 +140,17 @@
             let typingTime = 2000; // Default 2 seconds
 
             if (option === 1) {
-                response = "✅ <b>Fact:</b> Unless Business Relief is available in full, the value (or part) of a business can be charged to IHT, creating a significant liability.<br><br>" +
+                response = "✅ **Fact:** Unless Business Relief is available in full, the value (or part) of a business can be charged to IHT, creating a significant liability.<br><br>" +
                            "For example, if you have grown a £50m business that you would like to transfer either as part of retirement or estate planning and have not made use of Business Relief, this could create a 40% IHT liability of £20m.";
                 typingTime = 2000;
             } 
             else if (option === 2) {
-                response = "✅ <b>Fact:</b> Gifts of chargeable assets (such as shares and property) during your lifetime are also exposed to capital gains tax (CGT), risking a significant tax charge if the value of the asset has risen since you acquired it.<br><br>" +
+                response = "✅ **Fact:** Gifts of chargeable assets (such as shares and property) during your lifetime are also exposed to capital gains tax (CGT), risking a significant tax charge if the value of the asset has risen since you acquired it.<br><br>" +
                            "There are also anti-avoidance provisions to prevent you from retaining benefits from gifted assets, or assets acquired via gifts of cash, so lifetime gifts can require careful thought to be an important part of IHT planning.";
                 typingTime = 2500;
             } 
             else if (option === 3) {
-                response = "✅ <b>Fact:</b> Gifts of capital between you and another person are deemed potentially exempt transfers (PET) for IHT and do require you to survive seven years from the date of the gift.<br><br>" +
+                response = "✅ **Fact:** Gifts of capital between you and another person are deemed potentially exempt transfers (PET) for IHT and do require you to survive seven years from the date of the gift.<br><br>" +
                            "However, not all gifts are PET, and you may have scope to make immediately exempt gifts if that is appropriate for your situation and wishes.";
                 typingTime = 3000;
             }
@@ -136,8 +161,7 @@
             typingIndicator.innerHTML = "MythBuster is typing...";
             chatBox.appendChild(typingIndicator);
 
-            // Scroll chat to latest message
-            chatBox.scrollTop = chatBox.scrollHeight;
+            autoScroll();
 
             setTimeout(() => {
                 typingIndicator.remove(); // Remove typing indicator
@@ -155,10 +179,21 @@
                     botFollowUp.innerHTML = "💭 Got another myth you'd like to check? Choose from the options below!";
                     chatBox.appendChild(botFollowUp);
 
-                    // Show myths again
-                    setTimeout(showMyths, 1000);
+                    showMyths();
                 }, 1000);
             }, typingTime);
+        }
+
+        function autoScroll() {
+            let chatBox = document.getElementById("chat-box");
+            chatBox.scrollTop = chatBox.scrollHeight;
+        }
+
+        function resetChat() {
+            document.getElementById("chat-box").innerHTML = `
+                <div class="bot-message message">Welcome to the **Inheritance Tax MythBuster**. Our goal is to help you understand the facts behind common misconceptions about inheritance tax.</div>
+                <div class="bot-message message">Please select a myth from the options below, and I'll provide you with accurate information.</div>`;
+            showMyths();
         }
 
         // Show myths initially
